--- a/Runtime/ProDebug.Runtime.asmdef
+++ b/Runtime/ProDebug.Runtime.asmdef
@@ -1,6 +1,6 @@
 {
-    "name": "HMProDebug.Runtime",
-    "rootNamespace": "HMProDebug.Runtime",
+    "name": "ProDebug.Runtime",
+    "rootNamespace": "ProDebug.Runtime",
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
