--- a/Tests/EditMode/ProDebug.Tests.EditMode.asmdef
+++ b/Tests/EditMode/ProDebug.Tests.EditMode.asmdef
@@ -1,6 +1,6 @@
 {
-    "name": "HMProDebug.Tests.EditMode",
-    "rootNamespace": "HMProDebug.Tests.EditMode",
+    "name": "ProDebug.Tests.EditMode",
+    "rootNamespace": "ProDebug.Tests.EditMode",
     "references": [
         "GUID:27619889b8ba8c24980f49ee34dbb44a",
         "GUID:0acc523941302664db1f4e527237feb3",
